src/tui/tests/snapshots/keyring_cli__tui__tests__integration_tests__complete_onboarding_flow_snapshots.snap
---
source: src/tui/tests/integration_tests.rs
expression: seq.to_string()
---
Sequence: complete_onboarding

Step 1: welcome
──────────────


  ┌──────────────────────────────────────────────────────────────────────────┐
  │                         OpenKeyring Setup Wizard                         │
  └──────────────────────────────────────────────────────────────────────────┘


                             Welcome to OpenKeyring!



  Choose setup method:

  ┌ Options ─────────────────────────────────────────────────────────────────┐
  │  ● New User (Generate New Passkey)                                       │
  │    A 24-word Passkey will be generated                                   │
  │                                                                          │
  │  ○ Import Existing Passkey                                               │
  └──────────────────────────────────────────────────────────────────────────┘
  ┌──────────────────────────────────────────────────────────────────────────┐
  │                  Enter: Next    ↑↓: Choose    Esc: Exit                  │
  └──────────────────────────────────────────────────────────────────────────┘



Step 2: generate
───────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                     Set Master Password for This Device                    │
 └────────────────────────────────────────────────────────────────────────────┘


 ┌ Master Password ───────────────────────────────────────────────────────────┐
 │Master Password: Type here...                                               │
 │  ⚠️  Strength: Weak (0/100)                                                 │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌ Confirm Password ──────────────────────────────────────────────────────────┐
 │Confirm Password:                                                           │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 Hint: Password must be at least 8 characters


 💡  This password is only used to encrypt the Passkey
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                   Enter         Tab: Switch    Esc: Back                   │
 └────────────────────────────────────────────────────────────────────────────┘


Step 3: confirm
──────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                     Set Master Password for This Device                    │
 └────────────────────────────────────────────────────────────────────────────┘


 ┌ Master Password ───────────────────────────────────────────────────────────┐
 │Master Password: Type here...                                               │
 │  ⚠️  Strength: Weak (0/100)                                                 │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌ Confirm Password ──────────────────────────────────────────────────────────┐
 │Confirm Password:                                                           │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 Hint: Password must be at least 8 characters


 💡  This password is only used to encrypt the Passkey
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                   Enter         Tab: Switch    Esc: Back                   │
 └────────────────────────────────────────────────────────────────────────────┘


Step 4: master_password
──────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                     Set Master Password for This Device                    │
 └────────────────────────────────────────────────────────────────────────────┘


 ┌ Master Password ───────────────────────────────────────────────────────────┐
 │Master Password: Type here...                                               │
 │  ⚠️  Strength: Weak (0/100)                                                 │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌ Confirm Password ──────────────────────────────────────────────────────────┐
 │Confirm Password:                                                           │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 Hint: Password must be at least 8 characters


 💡  This password is only used to encrypt the Passkey
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                   Enter         Tab: Switch    Esc: Back                   │
 └────────────────────────────────────────────────────────────────────────────┘


Step 5: complete
───────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                     Set Master Password for This Device                    │
 └────────────────────────────────────────────────────────────────────────────┘


 ┌ Master Password ───────────────────────────────────────────────────────────┐
 │Master Password: Type here...                                               │
 │  ⚠️  Strength: Weak (0/100)                                                 │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌ Confirm Password ──────────────────────────────────────────────────────────┐
 │Confirm Password:                                                           │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 Hint: Password must be at least 8 characters


 💡  This password is only used to encrypt the Passkey
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                   Enter         Tab: Switch    Esc: Back                   │
 └────────────────────────────────────────────────────────────────────────────┘
