src/tui/tests/snapshots/keyring_cli__tui__tests__integration_tests__screen_sizes_integration.snap
---
source: src/tui/tests/integration_tests.rs
expression: seq.to_string()
---
Sequence: screen_sizes

Step 1: 60x20
────────────

 ┌────────────────────────────────────────────────────────┐
 │                    生 成 新 的  Passkey                    │
 └────────────────────────────────────────────────────────┘


      ⚠️  请 务 必 保 存 以 下  24 词 ， 这 是 恢 复 数 据 的 唯 一 方 式 ！


 ┌────────────────────────────────────────────────────────┐
 │                   正 在 生 成  Passkey...                  │
 │                                                        │
 └────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────┐
 │                   ☐ 我 已 保 存  Passkey                   │
 └────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────┐
 │       Enter: 需 先 确 认     Space: 确 认     Esc: 返 回       │
 └────────────────────────────────────────────────────────┘


Step 2: 80x24
────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                              生 成 新 的  Passkey                              │
 └────────────────────────────────────────────────────────────────────────────┘


                ⚠️  请 务 必 保 存 以 下  24 词 ， 这 是 恢 复 数 据 的 唯 一 方 式 ！


 ┌────────────────────────────────────────────────────────────────────────────┐
 │                             正 在 生 成  Passkey...                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                             ☐ 我 已 保 存  Passkey                             │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                 Enter: 需 先 确 认     Space: 确 认     Esc: 返 回                 │
 └────────────────────────────────────────────────────────────────────────────┘


Step 3: 120x30
─────────────

 ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                  生 成 新 的  Passkey                                                  │
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘


                                    ⚠️  请 务 必 保 存 以 下  24 词 ， 这 是 恢 复 数 据 的 唯 一 方 式 ！


 ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                 正 在 生 成  Passkey...                                                │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                 ☐ 我 已 保 存  Passkey                                                 │
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                     Enter: 需 先 确 认     Space: 确 认     Esc: 返 回                                     │
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
