src/tui/tests/snapshots/keyring_cli__tui__tests__integration_tests__wizard_back_navigation_flow.snap
---
source: src/tui/tests/integration_tests.rs
expression: seq.to_string()
---
Sequence: wizard_back_flow

Step 1: at_master_password
─────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                     Set Master Password for This Device                    │
 └────────────────────────────────────────────────────────────────────────────┘


 ┌ Master Password ───────────────────────────────────────────────────────────┐
 │Master Password: Type here...                                               │
 │  ⚠️  Strength: Weak (0/100)                                                 │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌ Confirm Password ──────────────────────────────────────────────────────────┐
 │Confirm Password:                                                           │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 Hint: Password must be at least 8 characters


 💡  This password is only used to encrypt the Passkey
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                   Enter         Tab: Switch    Esc: Back                   │
 └────────────────────────────────────────────────────────────────────────────┘


Step 2: back_to_confirm
──────────────────────


  ┌──────────────────────────────────────────────────────────────────────────┐
  │                         OpenKeyring Setup Wizard                         │
  └──────────────────────────────────────────────────────────────────────────┘


                             Welcome to OpenKeyring!



  Choose setup method:

  ┌ Options ─────────────────────────────────────────────────────────────────┐
  │  ● New User (Generate New Passkey)                                       │
  │    A 24-word Passkey will be generated                                   │
  │                                                                          │
  │  ○ Import Existing Passkey                                               │
  └──────────────────────────────────────────────────────────────────────────┘
  ┌──────────────────────────────────────────────────────────────────────────┐
  │                  Enter: Next    ↑↓: Choose    Esc: Exit                  │
  └──────────────────────────────────────────────────────────────────────────┘



Step 3: back_to_generate
───────────────────────


  ┌──────────────────────────────────────────────────────────────────────────┐
  │                         OpenKeyring Setup Wizard                         │
  └──────────────────────────────────────────────────────────────────────────┘


                             Welcome to OpenKeyring!



  Choose setup method:

  ┌ Options ─────────────────────────────────────────────────────────────────┐
  │  ● New User (Generate New Passkey)                                       │
  │    A 24-word Passkey will be generated                                   │
  │                                                                          │
  │  ○ Import Existing Passkey                                               │
  └──────────────────────────────────────────────────────────────────────────┘
  ┌──────────────────────────────────────────────────────────────────────────┐
  │                  Enter: Next    ↑↓: Choose    Esc: Exit                  │
  └──────────────────────────────────────────────────────────────────────────┘
