src/tui/tests/snapshots/keyring_cli__tui__tests__integration_tests__wizard_generate_flow_integration.snap
---
source: src/tui/tests/integration_tests.rs
expression: seq.to_string()
---
Sequence: wizard_generate_flow

Step 1: wizard_welcome
─────────────────────


  ┌──────────────────────────────────────────────────────────────────────────┐
  │                          OpenKeyring 初 始 化 向 导                           │
  └──────────────────────────────────────────────────────────────────────────┘


                             欢 迎 使 用  OpenKeyring！



  选 择 设 置 方 式 :

  ┌ 选 项  / Options ──────────────────────────────────────────────────────────┐
  │  ● 全 新 使 用 （ 生 成 新 的  Passkey）                                           │
  │    将 生 成 一 个  24 词 的  Passkey                                            │
  │                                                                          │
  │  ○ 导 入 已 有  Passkey                                                      │
  └──────────────────────────────────────────────────────────────────────────┘
  ┌──────────────────────────────────────────────────────────────────────────┐
  │                  Enter: 下 一 步     ↑↓: 选 择     Esc: 退 出                   │
  └──────────────────────────────────────────────────────────────────────────┘



Step 2: wizard_generate
──────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                              生 成 新 的  Passkey                              │
 └────────────────────────────────────────────────────────────────────────────┘


                ⚠️  请 务 必 保 存 以 下  24 词 ， 这 是 恢 复 数 据 的 唯 一 方 式 ！


 ┌ Passkey ───────────────────────────────────────────────────────────────────┐
 │  1. word           2. word           3. word           4. word             │
 │  5. word           6. word           7. word           8. word             │
 │  9. word          10. word          11. word          12. word             │
 │ 13. word          14. word          15. word          16. word             │
 │ 17. word          18. word          19. word          20. word             │
 │ 21. word          22. word          23. word          24. word             │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                             ☐ 我 已 保 存  Passkey                             │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                 Enter: 需 先 确 认     Space: 确 认     Esc: 返 回                 │
 └────────────────────────────────────────────────────────────────────────────┘


Step 3: wizard_confirm
─────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                                确 认  Passkey                                │
 └────────────────────────────────────────────────────────────────────────────┘


                          ⚠️  请 确 认 您 已 妥 善 保 存  Passkey

 ┌ Passkey 摘 要  ──────────────────────────────────────────────────────────────┐
 │Passkey 摘 要  (共  24 词 ):                                                    │
 │                                                                            │
 │前  4 词 :                                                                    │
 │word word word word                                                         │
 │                                                                            │
 │后  4 词 :                                                                    │
 │word word word word                                                         │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                          ☐ 我 已 安 全 保 存 此  Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                 Enter: 需 先 确 认     Space: 确 认     Esc: 返 回                 │
 └────────────────────────────────────────────────────────────────────────────┘
