src/tui/tests/snapshots/keyring_cli__tui__tests__integration_tests__wizard_import_flow_integration.snap
---
source: src/tui/tests/integration_tests.rs
expression: seq.to_string()
---
Sequence: wizard_import_flow

Step 1: wizard_import
────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                           Import Existing Passkey                          │
 └────────────────────────────────────────────────────────────────────────────┘


 Enter your 12 or 24 word Passkey (separated by spaces):

 ┌ Input ─────────────────────────────────────────────────────────────────────┐
 │> Type Passkey here...                                                      │
 │                                                                            │
 │Hint: Press Enter to validate when done                                     │
 └────────────────────────────────────────────────────────────────────────────┘







 ┌────────────────────────────────────────────────────────────────────────────┐
 │                        Enter: Validate    Esc: Back                        │
 └────────────────────────────────────────────────────────────────────────────┘
