src/tui/tests/snapshots/keyring_cli__tui__tests__integration_tests__wizard_validation_states.snap
---
source: src/tui/tests/integration_tests.rs
expression: seq.to_string()
---
Sequence: wizard_validations

Step 1: short_password
─────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                             设 置 本 设 备 的 主 密 码                              │
 └────────────────────────────────────────────────────────────────────────────┘


 ┌ 主 密 码  ────────────────────────────────────────────────────────────────────┐
 │主 密 码 : 在 此 输 入 ...                                                         │
 │  ⚠️  强 度 : 弱  (0/100)                                                       │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌ 确 认 密 码  ──────────────────────────────────────────────────────────────────┐
 │确 认 密 码 :                                                                   │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 提 示 : 密 码 至 少 需 要  8 个 字 符


 💡  此 密 码 仅 用 于 加 密  Passkey
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                    Enter         Tab: 切 换     Esc: 返 回                     │
 └────────────────────────────────────────────────────────────────────────────┘


Step 2: valid_password
─────────────────────

 ┌────────────────────────────────────────────────────────────────────────────┐
 │                             设 置 本 设 备 的 主 密 码                              │
 └────────────────────────────────────────────────────────────────────────────┘


 ┌ 主 密 码  ────────────────────────────────────────────────────────────────────┐
 │主 密 码 : 在 此 输 入 ...                                                         │
 │  ⚠️  强 度 : 弱  (0/100)                                                       │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 ┌ 确 认 密 码  ──────────────────────────────────────────────────────────────────┐
 │确 认 密 码 :                                                                   │
 │                                                                            │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
 提 示 : 密 码 至 少 需 要  8 个 字 符


 💡  此 密 码 仅 用 于 加 密  Passkey
 ┌────────────────────────────────────────────────────────────────────────────┐
 │                    Enter         Tab: 切 换     Esc: 返 回                     │
 └────────────────────────────────────────────────────────────────────────────┘
